fixed and renewed vagrant with some cookbooks

--- a/site-cookbooks/sudo/templates/default/sudoers.erb
+++ b/site-cookbooks/sudo/templates/default/sudoers.erb
@@ -8,11 +8,13 @@ Defaults        !lecture,tty_tickets,!fqdn
 
 # User privilege specification
 root          ALL=(ALL) ALL
-
-<% @sudoers_users.each do |user| -%>
-<%= user %>   ALL=(ALL) <%= "NOPASSWD:" if @passwordless %>ALL
+<% if @sudoers_users.is_a?(Array) -%>
+  <% @sudoers_users.each do |user| -%>
+    <%= user %>   ALL=(ALL) <%= "NOPASSWD:" if @passwordless %>ALL
+  <% end -%>
+<% else -%>
+  <% @sudoers_users %> ALL=(ALL) <%= "NOPASSWD:" if @passwordless %>ALL
 <% end -%>
-
 # Members of the sysadmin group may gain root privileges
 %sysadmin     ALL=(ALL) <%= "NOPASSWD:" if @passwordless %>ALL
 
